--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ avatar: /blog/uploads/avatar.jpg
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
 url: https://maywine.top:5002
 root: /blog/
-permalink: :year/:month/:day/:title/
+permalink: :post_title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
