--- a/themes/casper/_config.yml
+++ b/themes/casper/_config.yml
@@ -1,7 +1,7 @@
 # config
 cover: /blog/uploads/cover.jpg
 logo: /blog/uploads/avatar.jpg
-bio: 'maplewine@outlook.com'
+bio: 'https://github.com/maywine'
 
 # Content
 excerpt_link: Read More
